# profinder

./: .gitignore  LICENSE  README.md  env.yml  pyproject.toml  requirements.txt
profinder/: __init__.py  config.py  igr_extractor.py  pipeline.py  promoter_ipromarchaea.py  promoter_lcnn.py
profinder/hmms/: 5-FTHF_cyc-lig.hmm  AICARFT_IMPCHas.hmm  ATP-synt.hmm  ATP-synt_A.hmm  ATP-synt_D.hmm  ATP-synt_F.hmm  Adenylsucc_synt.hmm  AdoHcyase.hmm  Archease.hmm  CTP-dep_RFKase.hmm  CarS-like.hmm  Chorismate_synt.hmm  DNA_primase_lrg.hmm  DUF357.hmm  DUF359.hmm  DUF655.hmm  Diphthamide_syn.hmm  EF_TS.hmm  Exonuc_VII_L.hmm  Exonuc_VII_S.hmm  GTPbinding_bac_related1.hmm  GTPbinding_bac_related2.hmm  GrpE.hmm  HMG-CoA_red.hmm  Ham1p_like.hmm  IPPT.hmm  OSCP.hmm  PPS_PS.hmm  PTH2.hmm  Pept_tRNA_hydro.hmm  Peptidase_A8.hmm  Prefoldin.hmm  PseudoU_synth_1.hmm  RBFA.hmm  RNA_pol_L.hmm  RNA_pol_L_2.hmm  RNA_pol_N.hmm  RNA_pol_Rpb4.hmm  RNA_pol_Rpb6.hmm  RNase_HII.hmm  (+497 more)
profinder/motifs/: Acinetobacter_baumannii_ATCC_17978.meme  Agrobacterium_tumefaciens_C58.meme  Anabaena_sp._PCC7120.meme  Bacillus_subtilis_168.meme  Bacteroides_thetaiotaomicron_VPI-5482.meme  Bordetella_pertussis_Tohama_I.meme  Bradyrhizobium_japonicum_USDA_110.meme  Burkholderia_cenocepacia_J2315.meme  Campylobacter_jejuni_NCTC11168.meme  Caulobacter_crescentus_NA1000.meme  Chlamydia_pneumoniae_CWL029.meme  Chlamydia_trachomatis_L2b.meme  Clostridioides_difficile_630.meme  Corynebacterium_diphtheriae_NCTC_13129.meme  Corynebacterium_glutamicum_ATCC_13032.meme  Escherichia_coli_MG1655.meme  Listeria_innocua.meme  (+36 more)
(+8 files in other folders)
